@@ -12,7 +12,7 @@ DO NOT MODIFY - GENERATED CODE
   <parent>
     <groupId>org.jruby</groupId>
     <artifactId>jruby-parent</artifactId>
-    <version>10.0.1.0-SNAPSHOT</version>
+    <version>10.0.3.0-SNAPSHOT</version>
   </parent>
   <artifactId>jruby-base</artifactId>
   <name>JRuby Base</name>
@@ -55,9 +55,9 @@ DO NOT MODIFY - GENERATED CODE
     <test.results.dir>${build.dir}/test-results</test.results.dir>
     <tzdata.scope>provided</tzdata.scope>
     <tzdata.version>2019c</tzdata.version>
-    <version.ruby>3.4.2</version.ruby>
+    <version.ruby>3.4.5</version.ruby>
     <version.ruby.major>3.4</version.ruby.major>
-    <version.ruby.minor>2</version.ruby.minor>
+    <version.ruby.minor>5</version.ruby.minor>
   </properties>
   <dependencies>
     <dependency>
@@ -89,7 +89,7 @@ DO NOT MODIFY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-enxio</artifactId>
-      <version>0.32.18</version>
+      <version>0.32.19</version>
       <exclusions>
         <exclusion>
           <groupId>com.github.jnr</groupId>
@@ -100,7 +100,7 @@ DO NOT MODIFY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-unixsocket</artifactId>
-      <version>0.38.23</version>
+      <version>0.38.24</version>
       <exclusions>
         <exclusion>
           <groupId>com.github.jnr</groupId>
@@ -111,7 +111,7 @@ DO NOT MODIFY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-posix</artifactId>
-      <version>3.1.20</version>
+      <version>3.1.21</version>
       <exclusions>
         <exclusion>
           <groupId>com.github.jnr</groupId>
@@ -133,7 +133,7 @@ DO NOT MODIFY - GENERATED CODE
     <dependency>
       <groupId>com.github.jnr</groupId>
       <artifactId>jnr-ffi</artifactId>
-      <version>2.2.17</version>
+      <version>2.2.18</version>
     </dependency>
     <dependency>
       <groupId>com.github.jnr</groupId>
@@ -492,19 +492,6 @@ DO NOT MODIFY - GENERATED CODE
               </includes>
             </configuration>
           </execution>
-          <execution>
-            <id>eclipse-hack</id>
-            <phase>process-classes</phase>
-            <goals>
-              <goal>compile</goal>
-            </goals>
-            <configuration>
-              <skipMain>true</skipMain>
-              <includes>
-                <include>**/*.java</include>
-              </includes>
-            </configuration>
-          </execution>
         </executions>
         <configuration>
           <encoding>utf-8</encoding>
@@ -538,12 +525,6 @@ DO NOT MODIFY - GENERATED CODE
                 <fileset>
                   <directory>${project.basedir}/..</directory>
                   <includes>
-                    <include>bin/jruby</include>
-                  </includes>
-                </fileset>
-                <fileset>
-                  <directory>${project.basedir}/..</directory>
-                  <includes>
                     <include>lib/jni/**</include>
                   </includes>
                 </fileset>
@@ -568,6 +549,10 @@ DO NOT MODIFY - GENERATED CODE
           <includes>
             <include>org/jruby/test/**/*Test*.java</include>
             <include>org/jruby/embed/**/*Test*.java</include>
+            <include>org/jruby/exceptions/**/*Test*.java</include>
+            <include>org/jruby/ext/**/*Test*.java</include>
+            <include>org/jruby/java/**/*Test*.java</include>
+            <include>org/jruby/javasupport/*Test*.java</include>
             <include>org/jruby/util/**/*Test*.java</include>
             <include>org/jruby/runtime/**/*Test*.java</include>
           </includes>
@@ -581,7 +566,9 @@ DO NOT MODIFY - GENERATED CODE
         <configuration>
           <archive>
             <manifestEntries>
-              <Automatic-Module-Name>org.jruby</Automatic-Module-Name>
+              <Automatic-Module-Name>org.jruby.base</Automatic-Module-Name>
+              <Add-Opens>java.base/java.io java.base/java.nio.channels java.base/sun.nio.ch java.management/sun.management</Add-Opens>
+              <Enable-Native-Access>ALL-UNNAMED</Enable-Native-Access>
             </manifestEntries>
           </archive>
         </configuration>
@@ -649,40 +636,9 @@ DO NOT MODIFY - GENERATED CODE
   </build>
   <profiles>
     <profile>
-      <id>clean</id>
-      <activation>
-        <os>
-          <family>unix</family>
-        </os>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <phase>clean</phase>
-                <goals>
-                  <goal>exec</goal>
-                </goals>
-                <configuration>
-                  <executable>/bin/sh</executable>
-                  <arguments>
-                    <argument>-c</argument>
-                    <argument>cp ${jruby.basedir}/bin/jruby.sh ${jruby.basedir}/bin/jruby</argument>
-                  </arguments>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
       <id>error-prone</id>
       <activation>
-        <jdk>11</jdk>
+        <jdk>21</jdk>
         <property>
           <name>env.CI</name>
         </property>
@@ -716,52 +672,38 @@ DO NOT MODIFY - GENERATED CODE
                     <compilerArg>-J-Duser.language=en</compilerArg>
                     <compilerArg>-J-Dfile.encoding=UTF-8</compilerArg>
                     <compilerArg>-J-Xmx${jruby.compile.memory}</compilerArg>
+                  </compilerArgs>
+                  <compilerArgs>
+                    <compilerArg>-XDignore.symbol.file=true</compilerArg>
+                    <compilerArg>-J-Duser.language=en</compilerArg>
+                    <compilerArg>-J-Dfile.encoding=UTF-8</compilerArg>
+                    <compilerArg>-J-Xmx${jruby.compile.memory}</compilerArg>
                     <compilerArg>-XDcompilePolicy=simple</compilerArg>
+                    <compilerArg>--should-stop=ifError=FLOW</compilerArg>
                     <compilerArg>-Xplugin:ErrorProne</compilerArg>
+                    <compilerArg>-J--add-exports=jdk.compiler/com.sun.tools.javac.api=ALL-UNNAMED</compilerArg>
+                    <compilerArg>-J--add-exports=jdk.compiler/com.sun.tools.javac.file=ALL-UNNAMED</compilerArg>
+                    <compilerArg>-J--add-exports=jdk.compiler/com.sun.tools.javac.main=ALL-UNNAMED</compilerArg>
+                    <compilerArg>-J--add-exports=jdk.compiler/com.sun.tools.javac.model=ALL-UNNAMED</compilerArg>
+                    <compilerArg>-J--add-exports=jdk.compiler/com.sun.tools.javac.parser=ALL-UNNAMED</compilerArg>
+                    <compilerArg>-J--add-exports=jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</compilerArg>
+                    <compilerArg>-J--add-exports=jdk.compiler/com.sun.tools.javac.tree=ALL-UNNAMED</compilerArg>
+                    <compilerArg>-J--add-exports=jdk.compiler/com.sun.tools.javac.util=ALL-UNNAMED</compilerArg>
+                    <compilerArg>-J--add-opens=jdk.compiler/com.sun.tools.javac.code=ALL-UNNAMED</compilerArg>
+                    <compilerArg>-J--add-opens=jdk.compiler/com.sun.tools.javac.comp=ALL-UNNAMED</compilerArg>
                   </compilerArgs>
                   <annotationProcessorPaths>
                     <path>
                       <groupId>com.google.errorprone</groupId>
                       <artifactId>error_prone_core</artifactId>
-                      <version>2.18.0</version>
+                      <version>2.39.0</version>
                     </path>
                     <path>
                       <groupId>org.jruby</groupId>
                       <artifactId>jruby-base</artifactId>
-                      <version>10.0.1.0-SNAPSHOT</version>
+                      <version>10.0.3.0-SNAPSHOT</version>
                     </path>
                   </annotationProcessorPaths>
-                </configuration>
-              </execution>
-            </executions>
-          </plugin>
-        </plugins>
-      </build>
-    </profile>
-    <profile>
-      <id>jruby.sh</id>
-      <activation>
-        <os>
-          <family>unix</family>
-        </os>
-      </activation>
-      <build>
-        <plugins>
-          <plugin>
-            <groupId>org.codehaus.mojo</groupId>
-            <artifactId>exec-maven-plugin</artifactId>
-            <executions>
-              <execution>
-                <phase>initialize</phase>
-                <goals>
-                  <goal>exec</goal>
-                </goals>
-                <configuration>
-                  <executable>/bin/sh</executable>
-                  <arguments>
-                    <argument>-c</argument>
-                    <argument>cp ${jruby.basedir}/bin/jruby.sh ${jruby.basedir}/bin/jruby</argument>
-                  </arguments>
                 </configuration>
               </execution>
             </executions>
